--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,7 @@
     }
   ],
   "require": {
-    "php": ">=8.1",
-    "illuminate/support": "^10.0|^11.0",
-    "illuminate/events": "^10.0|^11.0",
-    "illuminate/broadcasting": "^10.0|^11.0"
+    "php": ">=7.2"
   },
   "autoload": {
     "psr-4": {
